--- a/home/dot_config/wofi/style.css.tmpl
+++ b/home/dot_config/wofi/style.css.tmpl
@@ -1,31 +1,32 @@
-{{- $c := .kanagawa.dragon -}}
+{{- $theme := .themes.kanagawa.dragon -}}
+{{- $s := .semantic -}}
 * {
     font-family: "Hack", monospace;
     font-size: 26px;
 }
 
 window {
-    background-color: {{ template "color-hex.tmpl" $c.bg_dark }};
+    background-color: {{ template "color-hex.tmpl" (index $theme $s.surface.primary) }};
 }
 
 #input {
     margin: 5px;
     border-radius: 0px;
     border: none;
-    background-color: {{ template "color-hex.tmpl" $c.bg_dark }};
-    color: {{ template "color-hex.tmpl" $c.fg_primary }};
+    background-color: {{ template "color-hex.tmpl" (index $theme $s.surface.primary) }};
+    color: {{ template "color-hex.tmpl" (index $theme $s.text.primary) }};
     font-size: 32px;
     padding: 10px;
 }
 
 #inner-box {
-    background-color: {{ template "color-hex.tmpl" $c.bg_medium }};
+    background-color: {{ template "color-hex.tmpl" (index $theme $s.surface.elevated) }};
 }
 
 #outer-box {
     margin: 2px;
     padding: 10px;
-    background-color: {{ template "color-hex.tmpl" $c.bg_medium }};
+    background-color: {{ template "color-hex.tmpl" (index $theme $s.surface.elevated) }};
 }
 
 #scroll {
@@ -34,17 +35,17 @@ window {
 
 #text {
     padding: 8px;
-    color: {{ template "color-hex.tmpl" $c.fg_primary }};
+    color: {{ template "color-hex.tmpl" (index $theme $s.text.primary) }};
     font-size: 26px;
     line-height: 1.3;
 }
 
 #entry:nth-child(even){
-    background-color: {{ template "color-hex.tmpl" $c.bg_light }};
+    background-color: {{ template "color-hex.tmpl" (index $theme $s.surface.subtle) }};
 }
 
 #entry:selected {
-    background-color: {{ template "color-hex.tmpl" $c.selection }};
+    background-color: {{ template "color-hex.tmpl" (index $theme $s.selection.background) }};
 }
 
 #text:selected {
