--- a/home/dot_config/fish/functions/lfcd.fish.tmpl
+++ b/home/dot_config/fish/functions/lfcd.fish.tmpl
@@ -1,6 +1,6 @@
-{{- $selection := .kanagawa.dragon.selection -}}
-{{- $green := .kanagawa.dragon.green -}}
-{{- $comment := .kanagawa.dragon.bright_black -}}
+{{- $selection := .themes.kanagawa.dragon.selection -}}
+{{- $green := .themes.kanagawa.dragon.green -}}
+{{- $comment := .themes.kanagawa.dragon.bright_black -}}
 {{- /* Convert hex to RGB values */ -}}
 {{- $sel_r := printf "0x%s" (substr 0 2 $selection) | atoi -}}
 {{- $sel_g := printf "0x%s" (substr 2 4 $selection) | atoi -}}
