fix: update config templates to use new theme path
Update variable assignment from:
  {{- $c := .kanagawa.dragon -}}
To:
  {{- $c := .themes.kanagawa.dragon -}}

Files updated (will receive semantic migration in subsequent commits):
- alacritty/alacritty.toml.tmpl
- qutebrowser/config.py.tmpl
- waybar/style.css.tmpl
- wiremix/wiremix.toml.tmpl
- mpv/mpv.conf.tmpl + script-opts/file_browser.conf.tmpl
- weechat/weechat.conf.tmpl + weechat/irc.conf.tmpl
- tremc/settings.cfg.tmpl

All templates now render without errors.

--- a/home/dot_config/mpv/mpv.conf.tmpl
+++ b/home/dot_config/mpv/mpv.conf.tmpl
@@ -1,4 +1,4 @@
-{{- $c := .kanagawa.dragon -}}
+{{- $c := .themes.kanagawa.dragon -}}
 # MPV Configuration - Ultra-Zen Media Experience
 # Kanagawa Dragon themed with semantic keybindings and file browser integration
 
