--- a/home/dot_config/mpv/script-opts/file_browser.conf.tmpl
+++ b/home/dot_config/mpv/script-opts/file_browser.conf.tmpl
@@ -1,4 +1,4 @@
-{{- $c := .kanagawa.dragon -}}
+{{- $c := .themes.kanagawa.dragon -}}
 # MPV File Browser - Kanagawa Dragon Theme
 # "Browse with intention, select with purpose"
 
