--- a/home/dot_config/private_weechat/weechat.conf.tmpl
+++ b/home/dot_config/private_weechat/weechat.conf.tmpl
@@ -1,6 +1,6 @@
 {{- /* WeeChat main configuration with Kanagawa theme and DCC settings */ -}}
 {{- /* Ultra-Zen: Mindful IRC with semantic colors and secure downloads */ -}}
-{{- $c := .kanagawa.dragon -}}
+{{- $c := .themes.kanagawa.dragon -}}
 
 #
 # weechat -- weechat.conf
