--- a/home/dot_config/qutebrowser/config.py.tmpl
+++ b/home/dot_config/qutebrowser/config.py.tmpl
@@ -1,4 +1,4 @@
-{{- $c := .kanagawa.dragon -}}
+{{- $c := .themes.kanagawa.dragon -}}
 # Qutebrowser Configuration - Ultra-Zen Web Navigation
 # "The keyboard becomes the interface; intention becomes action"
 #
