--- a/home/dot_config/waybar/style.css.tmpl
+++ b/home/dot_config/waybar/style.css.tmpl
@@ -1,4 +1,4 @@
-{{- $c := .kanagawa.dragon -}}
+{{- $c := .themes.kanagawa.dragon -}}
 /* Kanagawa Dragon Theme - Ultra-thin Waybar */
 /* Colors sourced from ~/.chezmoidata/colors.yaml */
 
