--- a/home/dot_config/wiremix/wiremix.toml.tmpl
+++ b/home/dot_config/wiremix/wiremix.toml.tmpl
@@ -1,4 +1,4 @@
-{{- $c := .kanagawa.dragon -}}
+{{- $c := .themes.kanagawa.dragon -}}
 # Wiremix Configuration - Modern TUI Audio Mixer for PipeWire
 # Themed with Kanagawa Dragon colors and Helix-native vi keybindings
 
