--- a/home/dot_config/private_weechat/irc.conf.tmpl
+++ b/home/dot_config/private_weechat/irc.conf.tmpl
@@ -1,6 +1,6 @@
 {{- /* WeeChat IRC configuration with IRC Highway and DCC auto-accept */ -}}
 {{- /* Ultra-Zen: Modern IRC with secure file acceptance and Kanagawa theming */ -}}
-{{- $c := .kanagawa.dragon -}}
+{{- $c := .themes.kanagawa.dragon -}}
 
 #
 # weechat -- irc.conf
