--- a/home/dot_config/tremc/settings.cfg.tmpl
+++ b/home/dot_config/tremc/settings.cfg.tmpl
@@ -1,5 +1,5 @@
 {{- /* Tremc configuration with Kanagawa Dragon theme */ -}}
-{{- $c := .kanagawa.dragon -}}
+{{- $c := .themes.kanagawa.dragon -}}
 #
 # Transmission Remote Curses Interface Configuration
 # Ultra-Zen: Kanagawa Dragon Theme
